# ticket-queue

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  frontend_build_hook.py  models.py  pyproject.toml  queuedb.py
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: Admin.jsx  App.jsx  Ticket.jsx  api.js  main.jsx  styles.css  utils.js
tests/: test_api.py  test_queue.py  test_ticket_queue.py
ticket_queue/: _packaged_frontend.py  api.py  app.py  cli.py  config.py  models.py  queuedb.py  ticket_queue.py
ticket_queue/api/: admin_api.py  api.py  dependencies.py  errors.py
ticket_queue/frontend/: index.html
ticket_queue/frontend/assets/: index-AkduN6cn.js  index-CT2dyDPn.js  index-CT6jR3qF.css  index-ChYLCghT.css  index-D2gJiIYC.css  index-DMgXP4Xa.css  index-TB2eAPHO.js
