[project]
name = "ticket-queue"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Harry Mander", email = "harrymander96@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "pydantic>=2.9.2",
]

[project.scripts]
ticket-queue = "ticket_queue:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "frontend_build_hook.py"
package-dir = "ticket_queue/frontend"
node-root = "frontend"

[dependency-groups]
dev = [
    "flake8>=7.1.1",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP"]
